# hhn-os-c_exercises

./: .gitignore  CMakeLists.txt  LICENSE.md  main.c
aufgabe1/: stack.c  stack.h
aufgabe2/: freeList.c  freeList.h  freeListEasy.h  freelist.c  freelist.h  heap.c  heap.h
aufgabe3/: canonicalDevice.c  canonicalDevice.h  main.c
